--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,12 @@
 {
-  "rewrites": [
+  "router": [
     {
-      "source": "/(.*)",
-      "destination": "/"
+      "src": "/",
+      "des": "/"
+    },
+    {
+      "src": "test",
+      "des": "/"
     }
   ]
 }
