--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,3 @@
 {
-  "router": [
-    {
-      "src": "/",
-      "des": "/"
-    },
-    {
-      "src": "test",
-      "des": "/"
-    }
-  ]
+  "rewrites": [{ "source": "/(.*)", "destination": "/" }]
 }
